# PyAbel

./: .gitignore  .pep8speaks.yml  .readthedocs.yml  .travis.yml  .zenodo.json  BASEX.py  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  example.py  pyproject.toml  setup.py  test.txt
.github/workflows/: build.yml  info.py  publish.yml  pytest.yml  save-test.py  sdist.yml  summary.py  summary.yml  wheels.yml
BASEX/: __init__.py  analytical.py  basis.py  core.py  io.py
BASEX/tests/: run.py  test_basis_set.py
abel/: HansenLaw.py  __init__.py  _version.py  analytical.py  basex.py  basis.py  benchmark.py  core.py  dasch.py  dasch_onion_peeling.py  daun.py  direct.py  hansen.py  hansen1d.py  hansenlaw.py  io.py  linbasex.py  math.py  nestorolsen.py  onion.py  onion_bordas.py  onion_dasch.py  onion_peeling.py  rbasex.py  three_point.py  tools.py  transform.py  two_point.py  vmi.py
abel/lib/: cython.pyx  direct.pyx
abel/tests/: .coverage  __init__.py  conftest.py  run.py  test_basex.py  test_basex_asym.py  test_basis_set.py  (+27 more)
basex/: __init__.py  basis.py
doc/: Makefile  abel.lib.rst  abel.rst  abel.tests.rst  anisotropy_parameter.rst  changelog_link.rst  circularize_image.rst  conf.py  docutils.conf  example_O2_PES_PAD.rst  example_all_dribinski.rst  example_anisotropy_parameter.rst  example_basex_gaussian.rst  example_basex_photoelectron.rst  example_basex_step.rst  example_circularize_image.rst  example_dasch_methods.rst  example_daun_degree.rst  example_daun_order.rst  example_daun_reg.rst  example_direct_gaussian.rst  example_hansenlaw.rst  example_hansenlaw_Xe.rst  example_hansenlaw_onion.rst  example_linbasex.rst  example_onion_bordas.rst  example_onion_dasch.rst  example_onion_peeling.rst  example_rbasex_block.rst  example_rbasex_multimass.rst  example_simple_GUI.py.rst  examples.rst  general_interface.rst  hansenlaw.ipynb  index.rst  pyabel.rst  readme_link.rst  requirements.txt  transform.py  transform_methods.rst
example_data/: Xenon_800_nm_speeds.txt
examples/: README.txt  basex_basis_501_250.npy  basex_basis_501_251.npy  example.py  example_GUI.py  example_HansenLaw.py  example_O2_PES_PAD.py  example_PAD.py  example_all_O2.py  example_all_O2_v2.py  example_all_Ominus.py  example_all_dribinski.py  example_anisotropy.py  example_anisotropy_parameter.py  example_anisotropy_parameters.py  example_basex_gaussian.py  example_basex_photoelectron.py  example_basex_step.py  example_circularize_image.py  example_dasch_methods.py  example_dasch_onion_peeling.py  example_daun_degree.py  example_daun_order.py  example_daun_reg.py  example_direct_custom.py  example_direct_gaussian.py  example_direct_nonuniform.py  example_direct_rmin.py  example_gausian.py  example_gaussian.py  example_hansenlaw.py  example_hansenlaw_Xe.py  example_hansenlaw_basex.py  example_hansenlaw_onion.py  example_hansenlaw_symm.py  example_linbasex.py  example_linbasex_hansenlaw.py  example_main.py  example_onion_bordas.py  example_onion_dasch.py  (+10 more)
pyabel/: __init__.py  basex.py  benchmark.py  dasch.py  daun.py  direct.py  hansenlaw.py  linbasex.py  onion_bordas.py  rbasex.py  transform.py
(+123 files in other folders)
